# hackernews

./: .README.md.swp  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  test_runner.py
.github/workflows/: test.yml
api_integration/: __init__.py  api.py  comment_scraper.py  content_fetcher.py  content_summarizer.py  context.md  scraper.py
automation/: cleanup_old_stories.py  context.md  crontab.txt  dump_comment_summaries.py  dump_top_stories.sh  fetch_top_stories.py  full_pipeline.sh  setup_cron.sh
email_delivery/: context.md
html_generator/: context.md
llm_integration/: __init__.py  analysis.py  api.py  cli.py  config.py  content_analysis.py  context.md  ollama_client.py
post_processing/: context.md
tests/: test_comment_scraper.py  test_content_analysis.py  test_content_summarizer.py  test_scraper.py
tests/fixtures/: hn_frontpage_sample.html  sample_article.html  sample_blog_post.html
ui/: app.js  context.md  index.html  server.py  styles.css
